--- a/docs/02/S02.04.linux.md
+++ b/docs/02/S02.04.linux.md
@@ -44,7 +44,7 @@ Une distribution Linux contient généralement :
 
 ![](./../../img/what-are-clouds-made-of.png)
 
-- 1991 [Linus Torvalds](https://fr.wikipedia.org/wiki/Linus_Torvalds), étudiant à l'université d'Helsinki, crée le Noyau Linux. (Il a aussi crée Git ensuite)
+1991 [Linus Torvalds](https://fr.wikipedia.org/wiki/Linus_Torvalds), étudiant à l'université d'Helsinki, crée le Noyau Linux. (Il a aussi crée Git ensuite)
 
 ![](./../../img/Linus_Torvalds.jpeg)
 
@@ -63,14 +63,13 @@ Que pouvons nous faire et comment ca marche ?
 
 Dans la suite de ce document on va :
 
-- travailler sur les repertoires et fichiers
-  - naviguer dans le système de fichier
-  - Modifier, copier, créer, supprimer les fichier et repertoires
-  - Voir et éditer les fichiers textes
-  - Modifier les permissions et accès d'un fichier
-  - installer des programmes avec le package manager
-  - observer les process
-  - et configurer un server web nginx
+- travailler sur les repertoires et fichier,
+- naviguer dans le système de fichier,
+- modifier, copier, créer, supprimer les fichier et repertoires
+- voir et éditer les fichiers textes,
+- modifier les permissions et accès d'un fichier,
+- installer des programmes avec le package manager,
+- observer les process,
 
 Let's go!
 
@@ -141,7 +140,7 @@ Je vous laisse lire la signification et le rôle de chaque répertoire.
 
 ## 2. File System Navigation
 
-### user, super user, f
+### user et super user
 
 Notez que vous êtes loggué comme `root`
 
@@ -405,13 +404,15 @@ ensuite on distingue 3 blocks (owner, group, other) de 3 caractères
 - `w` : pour write
 - `x` : pour executer
 
-Si a la place du r, w ou x on a un -: le fichier n'est pas  lisible, modifiable (ouvert en écriture) ou exécutable pour le owner, group ou tout le monde
+Si a la place du `r`, `w` ou `x`, on a un `-`: le fichier n'est ni lisible, ni modifiable, ni exécutable pour le owner, le groupe ou tout le monde
 
-Un fichier avec `-rwxrwxrwx` est lisible, modifiable et surtout executable par tous les utilisateurs. très dangereux.
+ ⛔️⛔️⛔️ Un fichier avec `-rwxrwxrwx` est lisible, modifiable et surtout executable par tous les utilisateurs. très dangereux. 🧨🧨🧨
 
-On a aussi
+On voit aussi:
 
 - `ubuntu ubuntu` : le owner et le group auquel le fichier appartient
+
+### Exemple
 
 par exemple, si on crée un nouveau fichier avec  `touch fichier.txt`, ce fichier aura un niveau de permissions assez restrictif:
 
@@ -419,10 +420,11 @@ par exemple, si on crée un nouveau fichier avec  `touch fichier.txt`, ce fichie
 -rw-r--r-- 1 root   root      0 Sep 26 09:53 fichier.txt
 ```
 
-Nous sommes loggué en tant que root, donc le owner et le group sont aussi `root root`
+Nous sommes loggué en tant que `root`, donc le owner et le group sont aussi `root root`
 
-Connectons nous maintenant en tant que user ubuntu avec `su - ubuntu`.  Si on crée un autre fichier `touch fichier2.txt`,
-on aura ubuntu comme owner de fichier2.txt
+Connectons nous maintenant en tant que user `ubuntu` avec `su - ubuntu`.
+
+Si on crée un autre fichier `touch fichier2.txt`, on aura `ubuntu` comme owner de `fichier2.txt`
 
 ```bash
 -rw-rw-r-- 1 ubuntu ubuntu     0 Sep 26 11:55 fichier2.txt
@@ -432,21 +434,23 @@ et les permissions sont moins restrictives.
 
 Pour revenir à la session root : `exit`
 
+### chmod et chown
+
 On change
 
 - les permissions d'un fichier avec `chmod`. Voir <https://www.gnu.org/software/coreutils/chmod>
 - le owner avec `chown`. Voir <https://www.gnu.org/software/coreutils/chown>
 
-Restreindre le niveau de permissions est  demandé pour les clefs SSH
+Restreindre le niveau de permissions au owner est souvent demandé pour les clefs SSH ou les fichiers de mot de passe.
 
 ## 6. Package Management
 
-Sur Debian et Ubuntu, installer un package, un programme, utilise le package manager `apt-get`
+Sur Debian et Ubuntu, installer un package, (programme, executable, ...) utilise le package manager `apt-get`.
 Sur d'autres distributions linux, le nom du package manager peut être différent.
 
-L'installation d'une programme est en 2 temps:
+L'installation d'une programme est toujours en 2 temps:
 
-1. mettre a jour l'index du package manager pour qu'il ait connaissance de la version la plus récente du programme.
+1. mettre a jour l'index du package manager pour qu'il ait connaissance de l'existence de la version la plus récente du programme.
 
 ```bash
 sudo apt-get update
@@ -460,19 +464,24 @@ sudo apt-get install  <nom du programme>
 
 ### Sudo or not Sudo
 
-ici `sudo` veut dire `super user do`.
+> `sudo` veut dire `super user do`.
+
+`sudo` permet à un utilisateur non root de devenir `root` le temps d'une ou plusieurs commandes dans une session.
 
 Comme nous sommes `root`, nous n'avons pas besoin de `sudo`.
-Donc en tant que root nous installons un programme avec;
+Donc en tant que root nous installons un programme avec:
 
 ```bash
 apt-get update
 apt-get install <nom du programme>
 ```
 
+sans faire précéder `apt-get` de `sudo`
+
 ### Installer `wget`
 
-task: on veut récupérer un fichier online.  Le programme le plus simple est `wget`. (`curl` est plus compliqué, mais plus complet)
+task: on veut récupérer un fichier online.  Le programme le plus simple est `wget`.
+On peut aussi utiliser `curl` qui est plus complet et complexe.
 
 ```bash
 wget <url>
@@ -484,19 +493,20 @@ Un exemple, essayons de récupérer un fichier csv sur le github
 wget https://raw.githubusercontent.com/SkatAI/ynov-docker/refs/heads/master/data/WorldHits.csv
 ```
 
-donne : `wget unknown`
+La commande ci-dessus donne : `wget unknown`
 
-Donc il faut installer `wget`
+Il faut donc installer `wget`
 
-d'abord
+d'abord toujours par mettre à jour la liste des packages avec:
 
 ```bash
 apt-get update
 ```
 
-pour mettre à jour la liste des packages. `apt-get upate` n'installe rien. Pour mettre à jour tous les programmes déjà installé, on fait ensuite  `apt-get upgrade`.
+> Note:
+`apt-get upate` n'installe rien. Pour mettre à jour tous les programmes déjà installé, on fait ensuite  `apt-get upgrade`.
 
-Ensuite pour installer wget: `apt-get wget` et enfin downloader le fichier
+Ensuite on installe `wget` avec: `apt-get wget` et enfin on peut downloader le fichier
 
 ### A vous: afficher le contenu d'un fichier de type texte
 
@@ -508,24 +518,24 @@ wget https://raw.githubusercontent.com/SkatAI/ynov-docker/refs/heads/master/data
 
 C'est un fichier de quelques centaines de tracks de Spotify.
 
-En utilisant `cat`, `head` et `tail` ainsi que `|`, affichez :
+En utilisant `cat`, `head` et `tail` ainsi que le pipe `|`, affichez :
 
 - la première ligne du fichier
 - les 10 dernières lignes du fichier
 - lignes 180 à 199 du fichier
 
 - Avec `grep` trouvez tous les tracks de :
-  - 'Al Di Meola'
+  - "Al Di Meola"
   - "Youssou N'Dour"
 
-- Changez le `owner` de WorldHits.csv pour ubuntu avec `chown`
+- Changez le `owner` de WorldHits.csv pour `ubuntu` avec `chown`
 - changez les permissions de WorldHits.csv pour que le fichier soit writable par tous le monde: `-rw-rw-rw-`
 
 Hint: regardez dans le manuel avec `man chown` et `man chown`
 
-#### Recap
+### Recap
 
-pour installer quelque chose (utilisateur non root)
+Pour installer un executable (utilisateur non root)
 
 ```bash
 sudo apt-get update
@@ -534,23 +544,22 @@ sudo apt-get install <program / package>
 
 quand on est `root`, ne pas mettre `sudo`
 
-Il ne faut **JAMAIS TRAVAILLER EN TANT QUE ROOT**
+Il ne faut 🧨🧨🧨 **JAMAIS TRAVAILLER EN TANT QUE ROOT** 🧨🧨🧨
 
 ## 7. Process Management avec `top` et `ps`
 
-dernière chose
+Dernière chose
 
-On souhaite voir les programmes qui tournent avec `top` et `ps`. Ce qui permet de troubleshooter les programmes qui ont crashé ou qui sont trop consommateur de resources.
+On souhaite voir les programmes qui tournent dans le container avec `top` et `ps`. Ces commandes permettent de troubleshooter les programmes qui ont crashé ou qui sont trop consommateurs de resources.
 
-`top:` donne la liste des process en cours d'excution qui sont les plus intensifs ainsi que le load average
+- `top:` donne la liste des process en cours d'exécution qui sont les plus intensifs ainsi que le **load average**
 
 ![](./../../img/ubuntu-top.png)
 
-Le load average est à surveiller pour voir si la VM est bien dimensionnée
+Le **load average** est à surveiller pour voir si la VM est bien dimensionnée
 
-`ps` donne la list des process en cours d'execution
-
-`ps -ef` et `ps aux` sont les deux commandes les plus utilisées.
+- `ps` donne la liste des process en cours d'execution
+- `ps -ef` et `ps aux` sont les deux commandes les plus utilisées.
 
 ![](./../../img/ubuntu-ps.png)
 
@@ -560,14 +569,14 @@ On peut combiner avec `grep` pour filtrer les process
 
 Par exemple pour trouver les process liés a PostgreSQL, à Nginx, ...:
 
-ps aux | grep postgres
-ps aux | grep nginx
+- `ps aux | grep postgres`
+- `ps aux | grep nginx`
 
-La sortie de ps aux est envoyée directement à `grep`
+La sortie de `ps` aux est envoyée directement à `grep`
 
 ## prochain exercice
 
-Vous allez installer un programme : cowsay et le faire fonctionner sur un container Ubuntu
+Vous allez installer un programme : `cowsay` et le faire fonctionner sur un container Ubuntu
 
 ## Pour finir
 
