--- a/docs/02/S02.05.linux-cowsay.exercice.md
+++ b/docs/02/S02.05.linux-cowsay.exercice.md
@@ -79,3 +79,7 @@ cowsay -f tux "bonjour le monde"
 2. `pipe` la sortie de `fortune` dans `cowsay`
 
 ![fortune pip cowsay](./../../img/memes/fortune-pipe-cowsay.png)
+
+### Bravo
+
+You're a nerd!
