--- a/docs/03/S01.01.intro-dockerfiles.md
+++ b/docs/03/S01.01.intro-dockerfiles.md
@@ -1,22 +1,24 @@
 # session 3: dockerfiles
 
-
-## Precedemment
+## Précédemment
 
 - docker image et container
-- linux et installer un server web
+- docker commands
+- linux
 
+## Cette session
 
-## Cette session 
+On regarde comment configurer / setup une image docker à partir
 
-on regarde commment configurer / setup une image docker a partir 
-- d'une image de base 
+- d'une image de base
 - d'un fichier de configuration
 
-et au fil de cette session et de la prochaine on va faire plusieurs TD de setup des images avec les themes de
+et au fil de cette session et de la prochaine on va faire plusieurs TD de setup des images sur les themes de
+
 - permanence des données
-- variables secretes et d'environnement
-- taille des images
-- publications des images sur un repository
+- variables secretes et variables d'environnement
+- réduction de la taille des images
+- réduction du build time
+- publications des images sur un le repository Docker Hub
 
 mais tout d'abord on commence par un lab sur qu'on a vu hier
