--- a/docs/03/S03.03.dockerfiles.md
+++ b/docs/03/S03.03.dockerfiles.md
@@ -1,148 +1,146 @@
 # Dockerfile
 
-Dans cette session nous allons voir les Dockerfile
-- comment ecrire une Dockerfile et l'utiliser
+Dans cette session nous allons voir les **Dockerfile**
+
+- comment écrire une Dockerfile, comment l'utiliser
 - les instructions de base
 - lancer un server web nginx
-- ameliorer le Dockerfile avec HEALTHCHECK, MAINTAINER, Cleanup, Non-root User
-- V2 en partant de nginx:latest (voir https://training.play-with-docker.com/beginner-linux/)
+- améliorer le Dockerfile avec HEALTHCHECK, MAINTAINER, Cleanup, Non-root User
+- V2 en partant de nginx:latest (voir <https://training.play-with-docker.com/beginner-linux/>)
 
-
-
-Puis dans une deuxieme session (cette apres midi)
-autre application plus data science
-
-- diff between CMD and ENTRYPOINT
+- difference entre CMD et ENTRYPOINT
 - persistence des données avec VOLUME
 - variables d'environnement et tokens secret (passwords, clef API etc)
+
+puis
+
 - notion de layers
+- rapidité du build
 - multistage build
 
+Applications
 
-Application
-- un Dockerfile pour une app streamlit simple 
+- un Dockerfile pour une app streamlit simple
 - un Docker file pour une app python avec scikit learn, LLM ?
 - bot discord ?
 
 ## Pourquoi écrire une Dockerfile
-Invoquer une image de base et de manuellement la modifier en ajoutant des elements 
-n'est pas un bon moyen de construire des images.
+
+Invoquer une image de base et de manuellement la modifier en ajoutant des éléments n'est pas un bon moyen de construire des images. Ca ne scale pas et il y a trop de risques d'erreur.
 
 It does not scale!
 
 - aucun moyen de reproduire les étapes de construction
-- pas de version control 
+- pas de version control
 - erreur humaine
-- versions flou 
+- difficile de spécifier les versions
+- faible reproductibilité
 
-Heureusement docker peut construire des images automatiquement à partir d'un fichier d'instruction 
-appelé Dockerfile.
+Heureusement docker peut construire des images automatiquement à partir d'un fichier d'instruction appelé Dockerfile.
 
-Ce fichier contient des instriuctions au format **INSTRUCTION arguments**;
+Ce fichier contient une suite d'instructions, toutes au format **INSTRUCTION arguments**;
 
-Par exemple:
-```
+Par exemple, ce Dockerfile install python fait tourner un script
+
+```bash
 FROM ubuntu:latest
 RUN apt-get install python
 COPY hello-world.py
 CMD python hello-world.py
 ```
 
-On construit l'image avec 
+Les instructions sont écrites dans un fichier intitulé par défaut Dockerfile
 
-```
+Puis on construit l'image avec
+
+```bash
 docker build .
 ```
 
-ou 
-```
+ou si le nom du Dockerfile n'est pas ... Dockerfile
+
+```bash
 docker build -f nom_du_dockerfile
 ```
 
-quand le Dockerfile a un autre nom que Dockerfile.
+Ce qui permet par exemple d'avoir des dockerfile pour différents environnements : Dockerfile.dev, Dockerfile.test etc
 
-On peut donc en quelques lignes recréer l'image de serveur web 
-que nous avons construite manuellement avec nginx.
- 
+On peut donc en quelques lignes recréer l'image de serveur web Nginx que nous avons construite manuellement.
 
-La Liste des commandes disponibles
-https://docs.docker.com/reference/dockerfile/
+Voici la Liste des instructions disponibles: <https://docs.docker.com/reference/dockerfile/>
 
-Instruction	Description
-
-ADD	Add local or remote files and directories.
-ARG	Use build-time variables.
-CMD	Specify default commands.
-COPY	Copy files and directories.
-ENTRYPOINT	Specify default executable.
-ENV	Set environment variables.
-EXPOSE	Describe which ports your application is listening on.
-FROM	Create a new build stage from a base image.
-HEALTHCHECK	Check a container's health on startup.
-LABEL	Add metadata to an image.
-MAINTAINER	Specify the author of an image.
-ONBUILD	Specify instructions for when the image is used in a build.
-RUN	Execute build commands.
-SHELL	Set the default shell of an image.
-STOPSIGNAL	Specify the system call signal for exiting a container.
-USER	Set user and group ID.
-VOLUME	Create volume mounts.
-WORKDIR	Change working directory.
+| Instruction  | Description                                                |
+|--------------|------------------------------------------------------------|
+| ADD          | Add local or remote files and directories.                 |
+| ARG          | Use build-time variables.                                  |
+| CMD          | Specify default commands.                                  |
+| COPY         | Copy files and directories.                                |
+| ENTRYPOINT   | Specify default executable.                                |
+| ENV          | Set environment variables.                                 |
+| EXPOSE       | Describe which ports your application is listening on.     |
+| FROM         | Create a new build stage from a base image.                |
+| HEALTHCHECK  | Check a container's health on startup.                     |
+| LABEL        | Add metadata to an image.                                  |
+| MAINTAINER   | Specify the author of an image.                            |
+| ONBUILD      | Specify instructions for when the image is used in a build.|
+| RUN          | Execute build commands.                                    |
+| SHELL        | Set the default shell of an image.                         |
+| STOPSIGNAL   | Specify the system call signal for exiting a container.    |
+| USER         | Set user and group ID.                                     |
+| VOLUME       | Create volume mounts.                                      |
+| WORKDIR      | Change working directory.                                  |
 
 Nous allons partir d'un jeu d'instruction simple et construire des images de plus en plus complexes.
 
-Nous regarderons aussi les dockerfile de certains projets opensource
-
-En parallèle de pouvoir specifier le contenu des images 
-on regardera les differents parametres disponibles pour la commande build.
-
-notamment le mode de caching et la déclaration du reseau.
+En parallèle de pouvoir specifier le contenu des images on regardera les différents paramètres disponibles pour la commande build notamment le mode de caching et la déclaration du réseau.
 
 ## Premier Dockerfile
-commencons par un exemple tres simple
 
+### Nom des fichiers
+
+Dns la suite nous allons ecrire plusieurs dockerfile. Donc nous utiliserons un nom de fichier unique et different de celui par defaut Dockerfile a chaque fois.
+
+Le mieux est de créer un repertoire dédié au Dockerfiles
+Mais normallement le Dockerfile est crée a la racine du project
+On buildera les images a partir des dockerfiles avec la commande
+
+```bash
+docker build -f <nom du dockerfile> -t <nom de l'image>:<tag de l'image> <nom du repertoire du dockerfile>
 ```
-FROM ubuntu:latest
+
+### hello_world.docker
+
+Commençons par un exemple tres simple
+
+```Dockerfile
+FROM alpine:latest
 CMD echo Hello World!
 ```
 
-Sauvegardez ces lignes dans un fichier `Dockerfile`
-puis 
+Sauvegardez ces lignes dans un fichier `hello_world.docker`
+puis
 
 ```bash
-docker build  -t ynov:hello-world . 
+docker build -f  hello_world.docker -t ynov:hello-world .
 ```
 
-On obtient
+cela build l'image `ynov:hello-world` à partir du fichier `hello_world.docker` situé dans le repertoire courant `.`.
 
-```bash 
-docker build -t ynov:hello-world  .
-[+] Building 0.2s (5/5) FINISHED
- => [internal] load build definition from Dockerfile                                                                                                              0.0s
- => => transferring dockerfile: 36B                                                                                                                               0.0s
- => [internal] load .dockerignore                                                                                                                                 0.0s
- => => transferring context: 32B                                                                                                                                  0.0s
- => [internal] load metadata for docker.io/library/ubuntu:latest                                                                                                  0.0s
- => CACHED [1/1] FROM docker.io/library/ubuntu:latest                                                                                                             0.0s
- => exporting to image                                                                                                                                            0.0s
- => => exporting layers                                                                                                                                           0.0s
- => => writing image sha256:3004ccc87cd0553f5449c5e14e6d4b1a22a68cf802ff6cbd7732689adbc94ae3                                                                      0.0s
- => => naming to docker.io/library/ynov:hello-world
-```
+On obtient:
+
+![docker build -f  hello_world.docker](./../../img/docker-build-helloworld.png)
+
 et maintenant on peut lancer le container:
 
-
 ```bash
-docker run ynov:hello-world 
+docker run ynov:hello-world
 ```
-ce qui retourne 
+
+ce qui retourne
+
 ```bash
 hello World!
 ```
-
-Note: on avait pas besoin de loader une image ubuntu pour juste faire echo.
-
-
 
 ## Les instructions
 
@@ -163,18 +161,18 @@ et aussi:
 
 ### Premier exemple
 
-On va ecrire le Dockerfile qui fais tourner un webserver NGinx et qui donne une page web indedx.html a l'adresse localhost:8000
+On va écrire le Dockerfile qui fais tourner un webserver NGinx et qui donne une page web index.html à l'adresse localhost:8080
 
-Sur votre machine, créez un nouveau repertoire 
+Sur votre machine, créez un nouveau repertoire
 
-mkdir -p ynov-docker/demo-nginx
-cd ynov-docker/demo-nginx
-
-creez le fichier  `nginx.local.conf`
-
-Dans nginx.local.conf ecrire le contenu 
-
+```bash
+mkdir -p ./demo-nginx
+cd ./demo-nginx
 ```
+
+Créez le fichier  `nginx.local.conf` et y copier le contenu suivant:
+
+```conf
 daemon off;
 
 events {
@@ -190,18 +188,15 @@ http {
 }
 ```
 
-Telechargez une page web html comme par exemple 
-https://fr.wikipedia.org/wiki/Linux
+Télechargez une page web html comme par exemple <https://fr.wikipedia.org/wiki/Linux> et renommez le fichier en index.html
+`mv Linux index.html`
 
-et renommez le fichier en index.html
+On travaille sur Ubuntu donc avec `apt-get` comme package manager
 
-On travaille sur Ubuntu donc avec 
-- apt-get comme package manager
-- 
+Les instructions à écrire dans le fichier Dockerfile sont
 
-Les étapes à ecrire dans le fichier Dockerfile sont
 - A partir de Ubuntu
-- installer nginx et wget 
+- installer nginx et wget
 - Exposer le port 80
 - creer un workdir  /var/www/html
 - et cd /var/www/html
@@ -209,27 +204,27 @@ Les étapes à ecrire dans le fichier Dockerfile sont
 - copier nginx.local.conf dans /etc/nginx/nginx.conf
 - run nginx
 
-see https://claude.ai/chat/10486c0b-bd3a-4daf-ba7d-9c5fde902eb0
+see <https://claude.ai/chat/10486c0b-bd3a-4daf-ba7d-9c5fde902eb0>
+
 - from Ubuntu
-- install nginx et wget 
-- Expos  port 80
+- install nginx et wget
+- Expose  port 80
 - create a  workdir  /var/www/html
 - cd /var/www/html
 - copy local file index.html in /var/www/html/
 - copy nginx.local.conf in /etc/nginx/nginx.conf
 - run nginx
 
-
 Les instructions a utiliser sont
 FROM
-RUN 
+RUN
 WORKDIR
 COPY
 
-
 solution
-```bash 
-FROM ubuntu:22.04
+
+```bash
+FROM ubuntu:latest
 
 # Install nginx and wget
 RUN apt-get update && apt-get install -y nginx wget
@@ -250,31 +245,43 @@ COPY nginx.local.conf /etc/nginx/nginx.conf
 CMD ["nginx", "-g", "daemon off;"]
 ```
 
-Une fois le fichier ecrit, 
-- creez l'image 
+Une fois le fichier écrit et sauvegardé,
+
+- creez l'image
   - taggez avec `-t` et le nom `nginx-demo:01`
 - creez et lancez le container
   - mode detaché `-d`
-  - mappez le port interne du container `80` au port externe `8080` 
+  - mappez le port interne du container `80` au port externe `8080`
 - verifiez que la page apparait bien sur localhost:8080
 
-```bash 
+```bash
 docker build -t nginx-demo:01 .
 docker run -d -p 8080:80 nginx-demo:01
 ```
 
-Verifiez que le container tourne avec docker ps -a 
+Vérifiez que le container tourne avec `docker ps -a`
 
-Maintenant allez dans le container (docker exec -it nginx-demo:01 /bin/bash)
+```bash
+CONTAINER ID   IMAGE                    COMMAND                  CREATED
+9cef311acfd2   nginx-demo:01            "nginx -g 'daemon of…"   9 seconds ago
+
+STATUS                      PORTS     NAMES
+Exited (1) 8 seconds ago              cool_moore
+```
+
+Maintenant allez dans le container (`docker exec -it nginx-demo:01 /bin/bash`)
 
 - verifiez que le process nginx tourne bien (ps aux | grep nginx)
 - verifiez que ...
 
+--------
+
+!!! le container s'arrete otut de suite meme en - mode
+
 ## On va publier l'image sur docker hub
 
 - creez un compte sur docker hub
-- 
-
+-
 
 ## Guidelines and Recommendations for Writing Dockerfiles p79
 
@@ -311,8 +318,8 @@ You can write Docker CMD/ENTRYPOINT instructions in both forms:
 
 ### Multi-Stage Builds (see file)
 
-what is the advantage of multi-stage builds over docker compose 
-see https://claude.ai/chat/dfdf46cb-7a51-4f3f-9650-2de92e4ec424
+what is the advantage of multi-stage builds over docker compose
+see <https://claude.ai/chat/dfdf46cb-7a51-4f3f-9650-2de92e4ec424>
 
 ## Exercices
 
