--- a/docs/03/S03.02.lab.nginxserver.md
+++ b/docs/03/S03.02.lab.nginxserver.md
@@ -1,46 +1,82 @@
 # TD docker web server
-avec Alpine et Nginx
 
-Dans cet exercice vous allez 
-- creer un container avec la distro Alpine
-- installer nginx et wget
+Cette fois avec  **Alpine** et **Nginx**
+
+## Scope
+
+Dans cet exercice vous allez
+
+- créer un container avec la distribution **Alpine**
+- installer **nginx** et **wget**
 - downloader une page html
-- lancer le serveur web et servir la page
+- lancer le serveur web
+- servir la page en local
 
 Tout ce passe dans le terminal!
 
+Dans la suite, il faut noter que
 
+1. Alpine utilise /bin/sh et non /bin/bash
+2. Alpine utilise le package manager `apk` au lieu de `apt-get`
 
-Dans la suite
+## Pourquoi Alpine et pas Ubuntu ou Debian
 
-Alpine utilise /bin/sh et non /bin/bash
-Alpine utilise le package manager apk au lieu de apt-get
+- Alpine: Extremely small (about 5MB)
+- Ubuntu/Debian: Much larger (usually 100MB+)
 
-# creation et acces au container
+- Alpine: Designed with security in mind
+- Ubuntu/Debian: Robust security but larger attack surface due to more included packages
 
-1. recuperer / telecharger l'image alpine:latest
+- Alpine: Fewer packages available by default
+- Ubuntu/Debian: Vast repositories of software
 
-avec `docker pull`
+## Why Alpine is Popular in Dockerfiles
 
-```
+1. **Smaller Image Size**
+   - Faster to download and transfer
+   - Reduces storage costs in registries
+
+2. **Reduced Attack Surface**
+   - Fewer installed packages mean fewer potential vulnerabilities
+
+3. **Faster Build Times**
+   - Smaller base image leads to quicker Docker builds
+
+4. **Resource Efficiency**
+   - Smaller footprint can mean better performance, especially in constrained environments
+
+5. **Simplicity**
+   - Minimalist approach aligns well with microservices architecture
+
+- Alpine: Ideal for microservices, simple applications, or when minimizing image size is crucial
+- Ubuntu/Debian: Better for complex applications, when broad software compatibility is needed, or when developers prefer a more familiar environment
+
+## creation et accès au container
+
+1. récupérer (`pull`) l'image `alpine:latest`
+
+```bash1
 docker pull alpine:latest
 ```
 
-2. Lancer un container sur cette image en mode interactif 
+2. Lancer un container sur cette image en mode interactif
 et acceder a un terminal
 
 utiliser les flags suivants
-* -it pour permettre l'acces a un terminal: interactif avec pseudo-tty
-* -name pour lui donner le nom nginx_container
+
+- -it pour permettre l'acces a un terminal: interactif avec pseudo-tty
+- -name pour lui donner le nom nginx_container
 
 Alpine utilise /bin/sh et non /bin/bash
 
 Create and run an Alpine Linux container in interactive mode with a pseudo-TTY:
-```
+
+```bash
 docker run -it --name nginx_container alpine:latest /bin/sh
 ```
 
 quelques questions
+
 - qui etes vous ?
 - allez dans /home quel est l'autre utilisateur du systeme ?
 - allez dans /root et listez les fichiers
@@ -49,24 +85,28 @@ est ce que `ll` est definie comme alias ?
 
 On voit bien que la distro alpine est mminimaliste
 
-
 ## setup du container
+
 3. Inside the container, update the package index:
+
 ```
 apk update
 ```
 
 4. Install nginx:
+
 ```
 apk add nginx
 ```
 
 5. Install wget (it's not included in the minimal Alpine image):
+
 ```
 apk add wget
 ```
 
 6. Create a directory for the website:
+
 ```
 mkdir /var/www/html
 cd /var/www/html
@@ -74,21 +114,20 @@ cd /var/www/html
 
 7. Use wget to download an HTML file (replace the URL with your desired webpage):
 
-utilisez wget pour telecharger la page https://fr.wikipedia.org/wiki/Linux
+utilisez wget pour telecharger la page <https://fr.wikipedia.org/wiki/Linux>
 
 trouver le flag qui permet de specifier le nom du fichier output
 
 wget --help
 
-faire en sorte que le fichier dde la page s'appelle index.html
+faire en sorte que le fichier de la page s'appelle index.html
 
-```
+```bash
 wget -O index.html https://fr.wikipedia.org/wiki/Linux
 ```
 
 quelles sont les 3 premieres lignes du fichier index.html
 utiliser head -n N
-
 
 8. Configure nginx to serve the downloaded webpage:
 
@@ -97,6 +136,7 @@ echo -e "daemon off;\n\nevents {\n worker_connections 1024;\n}\n\nhttp {\n serve
 ```
 
 9. Start nginx:
+
 ```
 nginx
 ```
@@ -104,20 +144,23 @@ nginx
 lister les process lié a nginx avec ps aux et grep
 
 10. Exit the container:
+
 ```
 exit
 ```
+
 L'image est configurée. on va maintenant la cloner / copier et lui donner un autre nom que alpine.
 
-
 11. Commit the changes to a new image:
+
 ```
 docker commit nginx_container my_nginx_alpine:v1
 ```
 
 12. Run the new container, mapping port 80 from the container to port 8080 on the host:
+
 ```
-docker run -d -p 8080:80 --name my_nginx_server my_nginx_alpine:v1 nginx 
+docker run -d -p 8080:80 --name my_nginx_server my_nginx_alpine:v1 nginx
 ```
 
 13. Verify the webpage is being served by opening a web browser and navigating to:
@@ -127,6 +170,7 @@ http://localhost:8080
 ```
 
 This exercise covers several important Docker concepts:
+
 - Pulling images
 - Creating and running containers
 - Working inside containers
@@ -138,3 +182,94 @@ This exercise covers several important Docker concepts:
 - Running containers in detached mode
 
 You may want to add explanations for each step and perhaps include some questions or additional tasks for the students to reinforce their learning. Let me know if you need any clarification or additional information for your worksheet!
+
+## Publiez votre image locale sur docker hub
+
+Quand vous avez fini vous pouvez publier votre image sur docker hub
+
+### Créez votre compte et repo docker
+
+allez sur docker.com et créez votre compte
+
+ensuite Créez un repository sur hub.docker.com
+
+### Publiez votre image
+
+1. Tag your local image with your Docker Hub username and repository name:
+
+```bash
+docker tag my_nginx_alpine:v1 skatai/ynov-docker:v1
+```
+
+This command associates your local image with the remote repository you created.
+
+si vous listez les images avec  docker images
+vous voyez votre image listé deux fois mais avec la meme ID
+
+Docker doesn't create a new copy of the image data. Instead, it creates a new reference (or alias) to the existing image. That's why you see two entries in the docker images output, but they have the same image ID (133bf6d7f567 in your case).
+
+2. Log in to Docker Hub from your terminal:
+
+puis dans le terminal loguez-vous sur docker
+
+```bash
+docker login
+```
+
+You'll be prompted to enter your Docker Hub username and password.
+
+3. Publiez the tagged image to Docker Hub:
+
+```
+docker push skatai/ynov-docker:v1
+```
+
+This command will upload your local image to the Docker Hub repository you created.
+
+After these steps, your image should be available on Docker Hub in the repository you created (skatai/ynov-docker).
+
+En general pour publier une image sur docker hub on suit le process
+
+1. tagging :  docker tag local-image:tagname new-repo:tagname
+2. push: docker push new-repo:tagname
+
+## que se passe til quand on publie une image sur Docker Hub
+
+Excellent questions! Let's break down what happens when you push an image to Docker Hub:
+
+1. What pushing an image really does:
+
+   When you push an image, Docker client sends the image layers to Docker Hub. An image is composed of multiple layers, each representing a change in the filesystem. Docker uses a content-addressable storage system, meaning each layer is identified by a hash of its contents.
+
+2. What's stored on Docker Hub:
+
+   - Image Layers: Docker Hub stores the individual layers that make up your image. These layers contain the file system changes and metadata.
+   - Image Manifest: This is a JSON file that describes the image, including the layers it's composed of and other metadata.
+   - Image Config: This contains runtime configuration for the image, like environment variables, exposed ports, and the default command to run.
+
+3. Is the whole image executable on Docker Hub?
+
+   No, Docker Hub doesn't execute your image. It's just a storage and distribution service. The image becomes executable when it's pulled and run on a machine with Docker installed.
+
+4. More things made available:
+
+   - Tags: You can have multiple tags for the same image, allowing version control.
+   - README: If your repository has a README.md file, it's displayed on the Docker Hub page.
+   - Description: You can add a short and full description to your repository.
+   - Collaborators: You can add users who can push to your repository.
+
+5. Does Docker Hub run some process?
+
+   Docker Hub doesn't run your container or execute your image. However, it does perform some processes:
+   - Image scanning (for supported plans): Checks for known vulnerabilities.
+   - Webhooks: Can trigger actions when an image is pushed.
+   - Automated Builds: Can build images automatically from source code repositories (GitHub/Bitbucket).
+
+When someone wants to use your image:
+
+1. They pull it from Docker Hub using `docker pull skatai/ynov-docker:v1`.
+2. Docker client downloads the necessary layers.
+3. The image is reconstructed on their local machine.
+4. They can then run a container from this image using `docker run skatai/ynov-docker:v1`.
+
+In essence, Docker Hub acts as a centralized repository for storing and distributing Docker images, but the actual execution of these images happens on the machines where they're pulled and run.
